--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://kit.fontawesome.com/c85d65058e.js" crossorigin="anonymous"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="style.css">
 
 
@@ -22,27 +24,11 @@
                 aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon "></span>
             </button>
-            <a class="navbar-brand navname me-auto" href="#">
+            <a class="navbar-brand navname me-auto d-sm-none d-lg-block p-3" href="#" id="navbarNav">
                 <img src="Image/logo.png" class="img-fluid" alt="logo">
             </a>
 
             <!-- <button class="signin-btn">Sign in</button> -->
-
-
-            <!-- start navbar left with goes nowhere -->
-            <ul class="navbar-nav navleft d-none d-lg-flex">
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Find Doctor</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Video Consult</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Surgeries</a>
-                </li>
-            </ul>
-            <!-- end navbar left with goes nowhere -->
-
 
             <!-- toggle collapse start -->
             <div class="collapse navbar-collapse " id="navbarNav">
@@ -83,61 +69,78 @@
                 <!-- navbar collapse into the toggle buttom end-->
 
 
-                <!-- navbar right start -->
-                <ul class="navbar-nav navright  d-none d-lg-flex">
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-icon  text-dark" href="#" data-bs-toggle="dropdown">For Corporate
-                            <i class="fa-solid fa-caret-down"></i>
-                        </a>
-
-                        <ul class="dropdown-menu dropdownitem">
-                            <li>
-                                <a class="dropdown-item" href="#">Health & Wellfare plan</a>
-                            </li>
-                            <li>
-                                <a class="dropdown-item" href="#">Group Insurance</a>
-                            </li>
-                        </ul>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-icon  text-dark" href="#" data-bs-toggle="dropdown">For Provider
-                            <i class="fa-solid fa-caret-down"></i>
-                        </a>
-
-                        <ul class="dropdown-menu dropdownitem">
-                            <li>
-                                <a class="dropdown-item" href="#">Practo Prime</a>
-                            </li>
-                            <li>
-                                <a class="dropdown-item" href="#">Software for Provider</a>
-                            </li>
-                            <li>
-                                <a class="dropdown-item" href="#">List Your practice for free</a>
-                            </li>
-                            <li>
-                                <a class="dropdown-item" href="#">ABDM</a>
-                            </li>
-                        </ul>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-icon  text-dark" href="#" data-bs-toggle="dropdown">Security & Help
-                            <i class="fa-solid fa-caret-down"></i>
-                        </a>
-                        <ul class="dropdown-menu dropdownitem">
-                            <li>
-                                <a class="dropdown-item" href="#">Data Security</a>
-                            </li>
-                            <li>
-                                <a class="dropdown-item" href="#">Help</a>
-                            </li>
-                        </ul>
+                <!-- start navbar left with goes nowhere -->
+                <div class="d-flex">
+                    <ul class="navbar-nav navleft d-none d-lg-flex">
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Find Doctor</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Video Consult</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Surgeries</a>
+                        </li>
+                    </ul>
+                    <!-- end navbar left with goes nowhere -->
 
 
-                    </li>
-                    <button class="logintab d-none d-lg-inline-block">
-                        <span>Login/Sign in</span>
-                    </button>
-                </ul>
+                    <!-- navbar right start -->
+                    <ul class="navbar-nav navright  d-none d-lg-flex">
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-icon text-dark" href="#" data-bs-toggle="dropdown"><span
+                                    class="badge bg-primary rounded-pill">New</span>For Corporate
+                                <i class="fa-solid fa-caret-down"></i>
+                            </a>
+
+                            <ul class="dropdown-menu dropdownitem">
+                                <li>
+                                    <a class="dropdown-item" href="#">Health & Wellfare plan</a>
+                                </li>
+                                <li>
+                                    <a class="dropdown-item" href="#">Group Insurance</a>
+                                </li>
+                            </ul>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-icon  text-dark" href="#" data-bs-toggle="dropdown">For Provider
+                                <i class="fa-solid fa-caret-down"></i>
+                            </a>
+
+                            <ul class="dropdown-menu dropdownitem">
+                                <li>
+                                    <a class="dropdown-item" href="#">Practo Prime</a>
+                                </li>
+                                <li>
+                                    <a class="dropdown-item" href="#">Software for Provider</a>
+                                </li>
+                                <li>
+                                    <a class="dropdown-item" href="#">List Your practice for free</a>
+                                </li>
+                                <li>
+                                    <a class="dropdown-item" href="#">ABDM</a>
+                                </li>
+                            </ul>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-icon  text-dark" href="#" data-bs-toggle="dropdown">Security &
+                                Help
+                                <i class="fa-solid fa-caret-down"></i>
+                            </a>
+                            <ul class="dropdown-menu dropdownitem">
+                                <li>
+                                    <a class="dropdown-item" href="#">Data Security</a>
+                                </li>
+                                <li>
+                                    <a class="dropdown-item" href="#">Help</a>
+                                </li>
+                            </ul>
+                        </li>
+                        <button class="logintab d-none d-lg-inline-block ">
+                            <span>Login/Sign in</span>
+                        </button>
+                    </ul>
+                </div>
                 <!-- navright end -->
 
 
@@ -164,8 +167,8 @@
 
 
     <!-- consult now start -->
-    <section class="consult d-flex flex-wrap">
-        <div class="col-lg-6 p-5 mt-2">
+    <section class="consult d-flex flex-wrap position-relative">
+        <div class="col-lg-6  col-md-6 col-xs-12 col-sm-6 p-5 mt-2">
             <div class="heading fw-bold fs-2 pt-2">
                 <div>Skip the travel!</div>
                 <div> Take Online Doctor Consultation</div>
@@ -177,36 +180,38 @@
                 <img src="Image/faces1.jpg" alt="faces1" height="40px" width="40px" class="rounded-circle face1">
                 <img src="Image/faces2.jpg" alt="faces2 " height="40px" width="40px" class="rounded-circle face2">
                 <img src="Image/faces3.jpg" alt="faces3" height="40px" width="40px" class="rounded-circle face3"> +126
-                Doctors are online
+                Doctors are online<span class="pulse"></span>
             </div>
-            <button class="btn btn-primary mt-4">Consult Now</button>
-            <div class="why d-flex pt-5 mt-2 gap-3">
+            <div class="py-4">
+                <button class="btn btn-primary fs-5 fw-bold">Consult Now</button>
+            </div>
+            <div class="why d-flex pt-4 gap-3">
                 <div> <i class="fa-solid fa-certificate"></i>Verified Doctors</div>
                 <div><i class="fa-solid fa-file-prescription"></i>Digital Prescription</div>
                 <div><i class="fa-regular fa-comment"></i>Free Followup</div>
             </div>
         </div>
-        <div class="col-lg-6 d-content">
-            <img src="Image/consultnow.png" alt="" class="consult-img">
+        <div class="col-lg-6 col-xs-12 col-md-6 col-sm-6 consultimg">
+            <img src="Image/consultnow.png" class="position-absolute">
         </div>
     </section>
     <!-- consult now end -->
 
     <!-- Specialities starts -->
-    <section class=" p-5">
-        <h2>25+Specialities</h2>
-        <p>Consult with top doctors across specialities</p>
-        <div class="d-flex flex-column">
-
+    <section class=" p-5 position-relative">
+        <h2 class="fw-bold">25+Specialities</h2>
+        <p style="color: gray;">Consult with top doctors across specialities</p>
+        <div class="d-flex  position-absolute seeall border border-dark rounded px-4 py-2">
             <a href="#" class="nav-link ms-auto">See All Symptoms</a>
         </div>
-        <div class="d-flex">
+        <div class="d-flex overflow-auto">
+            <div class="card align-items-center justify-content-center">
+                <<img src="https://www.practo.com/consult/static/images/top-speciality-gynaecologist.svg" alt="">
 
-            <div class="card align-items-center justify-content-center"><img
-                    src="https://www.practo.com/consult/static/images/top-speciality-gynaecologist.svg"
-                    alt="">Gynaecology
-                <span>&#8377;599</span>
-                <a href="#" class="nav-link text-primary">Consult Now> </a>
+                    Gynaecology
+                    <span>&#8377;599</span>
+                    <a href="#" class="nav-link text-primary">Consult Now> </a>
+
             </div>
             <div class="card align-items-center justify-content-center"><img
                     src="https://www.practo.com/consult/static/images/top-speciality-sexology.svg" alt="">Sexology
@@ -231,8 +236,9 @@
                 <a href="#" class="nav-link text-primary">Consult Now> </a>
             </div>
             <div class="card align-items-center justify-content-center text-center"><img
-                    src="https://www.practo.com/consult/static/images/top-speciality-stomach.svg" alt=""><span class="lh-1">Stomach and
-                digestion</span>
+                    src="https://www.practo.com/consult/static/images/top-speciality-stomach.svg" alt=""><span
+                    class="lh-1">Stomach and
+                    digestion</span>
                 <span>&#8377;499</span>
                 <a href="#" class="nav-link text-primary">Consult Now> </a>
             </div>
